--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@bghoard/api-interfaces": ["libs/api-interfaces/src/index.ts"]
+      "@bghoard/api-interfaces": ["libs/api-interfaces/src/index.ts"],
+      "@bghoard/review/ui-tile": ["libs/review/ui-tile/src/index.ts"],
+      "@bghoard/review/util-formatter": [
+        "libs/review/util-formatter/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
