--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,13 @@
     "baseUrl": ".",
     "paths": {
       "@bghoard/api-interfaces": ["libs/api-interfaces/src/index.ts"],
+      "@bghoard/review/data-access-games": [
+        "libs/review/data-access-games/src/index.ts"
+      ],
+      "@bghoard/review/feature-details": [
+        "libs/review/feature-details/src/index.ts"
+      ],
+      "@bghoard/review/feature-list": ["libs/review/feature-list/src/index.ts"],
       "@bghoard/review/ui-tile": ["libs/review/ui-tile/src/index.ts"],
       "@bghoard/review/util-formatter": [
         "libs/review/util-formatter/src/index.ts"
