--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,19 @@
       "@bghoard/review/ui-tile": ["libs/review/ui-tile/src/index.ts"],
       "@bghoard/review/util-formatter": [
         "libs/review/util-formatter/src/index.ts"
-      ]
+      ],
+      "@bghoard/store/data-access-cart": [
+        "libs/store/data-access-cart/src/index.ts"
+      ],
+      "@bghoard/store/data-access-games": [
+        "libs/store/data-access-games/src/index.ts"
+      ],
+      "@bghoard/store/feature-cart": ["libs/store/feature-cart/src/index.ts"],
+      "@bghoard/store/feature-details": [
+        "libs/store/feature-details/src/index.ts"
+      ],
+      "@bghoard/store/feature-list": ["libs/store/feature-list/src/index.ts"],
+      "@bghoard/store/ui-formatters": ["libs/store/ui-formatters/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
